content/vault/v1.16.x/content/docs/plugins/rollback.mdx
---
layout: docs
page_title: Rollback plugins
description: >-
    Rollback or downgrade Vault plugins.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-18T10:33:02-04:00
last_modified: 2025-07-18T10:33:02-04:00
# END AUTO GENERATED METADATA
---

# Rollback or downgrade Vault plugins

Downgrading a plugin in the catalog affects all uses of that plugin version.
Always check the plugin release notes for unsupported transitions before
starting your rollback or downgrade.


## Before you start

- **To register and downgrade official enterprise plugins, you must have Vault v1.16.21+,
  1.17.17+, 1.18.10+, 1.19.4+, or 1.20.x+**.
- **To register and downgrade official community plugins with an extracted `.zip` file, you must have
  Vault v1.16.21+, 1.17.17+, 1.18.10+, 1.19.5+, or 1.20.x+**.

@include 'plugins/common-requirements.mdx'


## Step 1: Prepare the plugin

@include 'plugins/prepare-plugin.mdx'


## Step 2: Update the plugin catalog

Register the replacement plugin binary or zip file with the old version number
under the same plugin type and name as the existing plugin version.

@include 'plugins/register.mdx'


## Step 3: Pin and reload the plugin

Until you reload the plugin, Vault continues running the current plugin version
on the mount path. When you trigger a reload, Vault kills the active plugin
process and start a new plugin process with the pinned version of that plugin.

@include 'plugins/pin-and-reload.mdx'


## Step 4: Verify the plugin status

@include 'plugins/verify-status.mdx'
